catalog & map & footer sections

--- a/app/index.html
+++ b/app/index.html
@@ -91,12 +91,443 @@
     </nav>
   </header>
   <div class="wrapper">
+    <section class="catalog">
+      <div class="container">
+        <h2 class="catalog__title title">
+          Каталог товаров
+        </h2>
+        <div class="catalog__inner">
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
+          <div class="catalog__item">
+            <h3 class="catalog__item-title title">
+              Тротуарная плитка, брусчатка, бордюры и водостоки
+            </h3>
+            <img class="catalog__item-img" src="images/paving-slabs.png" alt="paving slabs">
+            <ul class="catalog__info">
+              <li class="catalog__info-item">
+                Бетонная крупноформатная тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Плиты тротуарные ГОСТ 17608
+              </li>
+              <li class="catalog__info-item">
+                Тротуарная плитка
+              </li>
+              <li class="catalog__info-item">
+                Брусчатка
+              </li>
+              <li class="catalog__info-item">
+                Открытые водостоки и тротуарные лотки
+              </li>
+              <li class="catalog__info-item">
+                Бордюры и водостоки
+              </li>
+              <li class="catalog__info-item">
+                Бетонопаркет
+              </li>
+            </ul>
+            <a href="#" class="catalog__link">
+              Подробнее
+            </a>
+          </div>
 
+        </div>
+      </div>
+    </section>
+    <section class="map">
+      <div class="map__contacts">
+        <h6 class="map__contacts-title">Контакты</h6>
+        <ul class="map__contacts-list">
+          <li class="map__contacts-item">
+            <a class="map__contacts-link" href="tel:+79506165757" >
+              +7 950 616-57-57
+            </a>
+          </li>
+          <li class="map__contacts-item">
+            <a class="map__contacts-link" href="mailto:plitkaikamen-nn@yandex.ru" >
+              plitkaikamen-nn@yandex.ru
+            </a>
+          </li>
+          <li class="map__contacts-item">
+            <a class="map__contacts-link" href="#" >
+              г. Нижний Новгород, ул. Федосеенко, 45
+            </a>
+          </li>
+          <li class="map__contacts-item">
+            <a class="map__contacts-link" href="#" >
+              <span>Пн-Пт: c 9:00–20:00,</span>
+              <span>Сб-Вс: 10:00–18:00</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </div>
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
-
+          <a href="#" class="logo">
+              <picture class="logo__img">
+                  <img src="images/logo-white.png" alt="logo">
+              </picture>
+          </a>
+          <div class="footer__menu">
+            <ul class="footer__list">
+              <li class="footer__list-title title">
+                Информация
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Сертификаты
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  О нас
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Доставка
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Политика безопасности
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Условия соглашения
+                </a>
+              </li>
+            </ul>
+            <ul class="footer__list">
+              <li class="footer__list-title title">
+                Служба поддержки
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Карта сайта
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Возврат товара
+                </a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Контакты
+                </a>
+              </li>
+            </ul>
+            <ul class="footer__list">
+              <li class="footer__list-title title">
+                Дополнительно
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__item-link">
+                  Акции
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__payments">
+            <div class="payments">
+              <h6 class="payments__title title">Возможность оплаты:</h6>
+              <ul class="payments__list">
+                <li class="payments__item">
+                  <a href="#" class="payments__item-link">
+                  </a>
+                </li>
+                <li class="payments__item">
+                  <a href="#" class="payments__item-link">
+                  </a>
+                </li>
+                <li class="payments__item">
+                  <a href="#" class="payments__item-link" >
+                  </a>
+                </li>
+                <li class="payments__item">
+                  <a href="#" class="payments__item-link">
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="payments__bottom">
+              <h6 class="payments__title title">Наш магазин в соц. сетях:</h6>
+              <a href="#" class="paments__bottom-link">
+                <img class="payments__bottom-icon" src="images/instagram.png" alt="instagram">
+              </a>
+            </div>
+          </div>
+      </div>
+      <div class="footer__bottom">
+        <a href="#" class="footer__bottom-item">
+          Все права защищены © 2022
+        </a>
+        <a href="#" class="footer__bottom-item">
+          Публичная оферта
+        </a>
+        <a href="#" class="footer__bottom-item">
+          Разработка сайтов
+        </a>
       </div>
     </div>
   </footer>
